--- a/style.css
+++ b/style.css
@@ -93,11 +93,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 50px;
 }
 
 video {
     margin-top: 5rem;
     border-radius: 15px;
+    min-width: 100px;
 }
 
 .main-nosotros-h2 {
@@ -213,3 +215,122 @@ video {
     color: rgb(13, 13, 148);
     cursor: pointer;
 }
+
+/* Zona responsiva */
+/* Responsive a seccion del header */
+@media (max-width: 640px) { 
+    .header {
+        flex-direction: column;
+        height: 350px;
+        padding: 30px 0;
+        position: static;
+    }
+    .header-list {
+        flex-direction: column;
+        text-align: center;
+    }
+    .header-a {
+        font-size: 1.2rem;
+    }
+}
+/* Responsive a seccion de inicio */
+@media (max-width: 1024px) { 
+    .main-inicio {
+        align-items: center;
+        height: 100vh;
+    }
+
+    .main-inicio-container {
+        width: 80%;
+    }
+
+    .main-inicio-h1 {
+        text-align: center;
+        font-size: 1.4rem;
+    }
+    
+    .main-inicio-p {
+        text-align: justify;
+        margin-top: 1rem;
+        font-size: 0.8rem;
+    }
+}
+
+/* Responsive a seccion de Acerca de nosotros */
+
+@media (max-width: 640px) { 
+    .main-nosotros {
+        flex-direction: column;
+
+    }
+
+    .main-nosotros-container {
+        width: 100%;
+    }
+
+    .main-nosotros-container__video {
+        padding: 0 20px;
+    }
+
+    .main-nosotros-p {
+        font-size: 0.8rem;
+        margin-top: 25px;
+    }
+}
+
+/* Responsive a catalogo */
+@media (max-width: 768px) {
+    .catalogo {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+    }
+}
+
+@media (max-width: 640px) {
+    .catalogo {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+    }
+
+    .imagen img {
+     width: 180px;
+    }
+}
+
+/* Responsive a footer */
+@media (max-width: 1024px) {
+    .footer {
+        height: 200px;
+    }
+
+    .footer-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-container-img {
+        min-width: 150px;
+        margin: 0 auto;
+    }
+
+    .footer-ul {
+        margin: 0 auto;
+    }
+
+    .footer-p {
+        font-size: 1rem;
+        min-width: 70%;
+    }
+
+    .fa-brands {
+        font-size: 1.5rem;
+    }
+}
+
+
+
+
+
