--- a/style.css
+++ b/style.css
@@ -153,6 +153,58 @@ video {
     transform: scale(1.2);
 }
 
+/* Seccion de formulario */
+span {
+    color: red;
+    font-size: 0.7em;
+}
+
+.form {
+    background-color: #000;
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    border-bottom: 2px solid #fff;
+}
+
+form {
+    background-color: #fff;
+    width: 25%;
+    margin: 0 auto;
+    padding: 1rem 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    border-radius: 15px;
+}
+
+label {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.input {
+    height: 2rem;
+    border-radius: 5px;
+}
+
+.submit {
+    background-color: #000;
+    color: #fff;
+    border: 2px solid #6d6d6d;
+    border-radius: 15px;
+    width: 10rem;
+    margin: 0 auto;
+    padding: 10px 0;
+    font-weight: 600;
+}
+
+.submit:hover {
+    background-color: #646464;
+    border: 2px solid #000000;
+}
+
 /* Seccion del pie de página */
 .footer {
     background-color: #000;
